--- a/school-website/contact.html
+++ b/school-website/contact.html
@@ -21,7 +21,7 @@
     <!-- begin header section-->
     <header class="header">
         <a href="#" class="logo">
-            <i class="fas fa-lightbulb"></i> Crestview
+            <i class="fas fa-lightbulb"></i> EducateView
         </a>
 
         <nav class="navbar">
