--- a/school-website/contact.html
+++ b/school-website/contact.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SCHOOL-WEBSITE</title>
+    <title>EducateView</title>
+    <link rel="icon" type="image/png" href="favicon.webp">
 
     <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
@@ -151,7 +152,7 @@
               </div>
               <p class="accordion-content">
                  We have several numbers display on our website and you can contact any and you will recieve 
-                 an immediate response from our stuff. You can also find us throught our Email which is crestview@education.com
+                 an immediate response from our stuff. You can also find us throught our Email which is smr69413@gmail.com
               </p>
            </div>
      
