--- a/school-website/about.html
+++ b/school-website/about.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>SCHOOL-WEBSITE</title>
+    <title>EducateView</title>
+    <link rel="icon" type="image/png" href="favicon.webp">
 
     <!-- css link -->
     <link rel="stylesheet" href="css/style.css">
@@ -89,7 +90,7 @@
         <div class="content">
             <h3 class="about-title">Creating a community of learners.</h3>
             <p>
-                Crestview is a community of learners including students, 
+                EducateView is a community of learners including students, 
                 parents and staff who are dedicated to creating an academically rigorous, 
                 culturally caring and inclusive learning environment. We are Reaching 
                 Excellence in Academics and Changing History!
@@ -247,7 +248,7 @@
 
                 <div class="swiper-slide slide">
                     <p>
-                        Crestview has the best mentors that hold your hand and guide
+                        EducateView has the best mentors that hold your hand and guide
                         you through the curriculum and advice you every step of the way.<br/>
                         I am happy that I was able to get such a great experince.
                     </p>
@@ -266,7 +267,7 @@
 
                 <div class="swiper-slide slide">
                     <p>
-                        Being a culinary arts student at Crestview was such a great opportunity for me, 
+                        Being a culinary arts student at EducateView was such a great opportunity for me, 
                         I was able to work with the best mentors and have one on one sessions with
                         some of the greatest chef ever known to the world enabling me to learn so much 
                         from them.
@@ -305,7 +306,7 @@
 
                 <div class="swiper-slide slide">
                     <p>
-                        I joined the Software Engineering program at Crestview and I was lucky to be one 
+                        I joined the Software Engineering program at EducateView and I was lucky to be one 
                         of the top in my module and I ended up being a mentor at Crestview, life has never 
                         been the same for me since then. I really enjoy my work here at Crestview.
                     </p>
@@ -324,7 +325,7 @@
 
                 <div class="swiper-slide slide">
                     <p>
-                       After Crestview I was able to open my own dance studio and I am able to share what 
+                       After EducateView I was able to open my own dance studio and I am able to share what 
                        I learnt in Crestview to the world.
                        I am really greatful to my mentors who were able to walk with me every step of the way.  
                     </p>
@@ -343,7 +344,7 @@
 
                 <div class="swiper-slide slide">
                     <p>
-                        When I first joined Crestview I was abit overwhelmed because I had left my country to join the medicine course.
+                        When I first joined EducateView I was abit overwhelmed because I had left my country to join the medicine course.
                         I was happy to see that there was diversity in the school and see people from different parts of the country
                         all in one place. 
                     </p>
