--- a/school-website/index.html
+++ b/school-website/index.html
@@ -333,5 +333,6 @@
 
    <!-- js file link --> 
    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
