--- a/school-website/courses.html
+++ b/school-website/courses.html
@@ -319,5 +319,6 @@
 
    <!-- js file link --> 
    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
