--- a/school-website/contact.html
+++ b/school-website/contact.html
@@ -277,5 +277,6 @@
 
    <!-- js file link --> 
    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
