--- a/school-website/about.html
+++ b/school-website/about.html
@@ -422,5 +422,6 @@
 
    <!-- js file link --> 
    <script src="js/script.js"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
